Fixing header z-index

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -38,7 +38,7 @@ footer {
 }
 
 footer.beneath {
-  z-index: -2;
+  z-index: -1;
 }
 
 @media screen and (max-width: 575px) {
