--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,8 +2,6 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  background-color: #ffffff;
-  z-index: -1;
 }
 
 .title {
